v2/k3s-manifests/monitoring-wandoor/lgtm/tempo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tempo
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tempo
  template:
    metadata:
      labels:
        app: tempo
    spec:
      containers:
        - name: tempo
          image: grafana/tempo:2.4.1
          args:
            - "-config.file=/etc/tempo/config.yml"
          ports:
            - containerPort: 3200
            - containerPort: 4317
            - containerPort: 4318
          volumeMounts:
            - name: tempo-config
              mountPath: /etc/tempo/config.yml
              subPath: config.yml
      volumes:
        - name: tempo-config
          hostPath:
            path: /opt/lgtm/tempo/config.yml
            type: File

---
apiVersion: v1
kind: Service
metadata:
  name: tempo
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    app: tempo
  ports:
    - port: 3200
      targetPort: 3200
    - port: 4317
      targetPort: 4317
    - port: 4318
      targetPort: 4318
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tempo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: tempo.wandoor.my.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tempo
                port:
                  number: 3200
